Update .config/nvim/init.lua Update .config/nvim/lazy-lock.json Update .config/nvim/lua/chadrc.lua Update .config/nvim/lua/config/keymaps.lua Update .config/nvim/lua/config/lazy.lua Update .config/nvim/lua/config/options.lua Update .config/nvim/lua/plugins/blink.lua Update .config/nvim/lua/plugins/lualine.lua Update .config/nvim/lua/plugins/mini.lua Update .config/nvim/lua/plugins/noice.lua Update .config/nvim/lua/plugins/snacks.lua Update .config/nvim/lua/plugins/ui.lua Update .config/tmux/tmux.conf Update .config/vicinae/vicinae.json Update .config/waybar/config.jsonc Update .config/waybar/style.css Update .config/zed/settings.json Update .config/zed/themes/aether.json

--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -12,7 +12,7 @@ window#waybar {
     /* background-color: transparent; */
     color: @foreground;
     border-radius: 4px;
-    font-family: 'CommitMono Nerd Font';
+    font-family: 'BerkeleyMono Nerd Font';
     font-weight: 300;
 }
 
