--- a/dot_config/ghostty/config.tmpl
+++ b/dot_config/ghostty/config.tmpl
@@ -19,6 +19,7 @@ gtk-toolbar-style = flat
 cursor-style = "block"
 cursor-style-blink = false
 
+keybind = cmd+w=text:\x17
 # Cursor styling + SSH session terminfo
 # (all shell integration options must be passed together)
 shell-integration-features = no-cursor,ssh-env
@@ -27,4 +28,4 @@ shell-integration-features = no-cursor,ssh-env
 mouse-scroll-multiplier = 0.95
 
 background-opacity = 0.95
-theme = dark:Iceberg Dark,light:Catppuccin Latte
+theme = dark:Everblush,light:Catppuccin Latte
