--- a/dot_config/ghostty/config.tmpl
+++ b/dot_config/ghostty/config.tmpl
@@ -11,7 +11,8 @@ adjust-cell-height = 57%
 window-theme = ghostty
 window-padding-x = 14
 window-padding-y = 14
-confirm-close-surface=false
+macos-titlebar-style = hidden
+confirm-close-surface = false
 resize-overlay = never
 gtk-toolbar-style = flat
 
