--- a/dot_config/ghostty/config.tmpl
+++ b/dot_config/ghostty/config.tmpl
@@ -3,6 +3,7 @@ config-file = ?"~/.config/omarchy/current/theme/ghostty.conf"
 
 # Font
 font-family = {{ .font }}
+font-family-italic = {{ .font }}
 font-style = Regular
 font-size = 13
 adjust-cell-height = 57%
