--- a/dot_config/ghostty/config.tmpl
+++ b/dot_config/ghostty/config.tmpl
@@ -31,4 +31,4 @@ shell-integration-features = no-cursor,ssh-env
 mouse-scroll-multiplier = 0.95
 
 background-opacity = 1
-theme = dark:Everforest Dark Hard,light:Night Owlish Light
+theme = dark:Ghostty Default Style Dark,light:Night Owlish Light
